# hft_grading

./: .gitignore  CMakeLists.txt  README.md  TODO.md  dump.rdb  start.sh  start_prod.sh
.cache/clangd/index/: arena.cpp.B1FB364D0AD5896E.idx  arena.hpp.50FBFB4F09D1AC2A.idx  bench_arena.cpp.AE1C9FB1AC32BDDC.idx  bench_blaster.cpp.FA117644B64E4E43.idx  bench_pipeline.cpp.B1BDCEDCF863D3B9.idx  bench_ringbuf.cpp.E561F7AA84D4E37A.idx  bench_shm.cpp.9D296FA8804F4B5F.idx  bench_ultra.cpp.CE9C6777274BB81C.idx  bot_fleet.cpp.8CF8D77FBFC5FB04.idx  bot_fleet.hpp.B25775C80BAF6275.idx  compiler_hints.hpp.1EB0D1DDCCE60352.idx  compiler_service.hpp.B891EC5087C7DF0C.idx  consumer.cpp.4C1A9F51E6EB6B85.idx  consumer.hpp.47B6BB4FAD6826C7.idx  contest_runner.hpp.FC765BDB8ECE33E9.idx  cpu_affinity.hpp.B64312AE18662158.idx  dummy_exchange.cpp.A1F6F88979144481.idx  example_mm.cpp.1E7D7B6B2D777DA5.idx  exchange_local.cpp.09D64F3EBD7AE76B.idx  firecracker_manager.hpp.78C734B2B3CEF055.idx  gateway.hpp.A41E7EFA3C199681.idx  gateway_client.hpp.5D87A104CB1BB39D.idx  hdr_histogram.cpp.A66E08D4E3554DC6.idx  hdr_histogram.hpp.60D4D853E7BCE59F.idx  hot_path_asm.hpp.D0BAB9556663CC41.idx  integrated_worker.cpp.AAF2E94E75D93672.idx  io_engine.cpp.F645B05E2BE551F7.idx  io_engine.hpp.115E6B276F832301.idx  market_data_gen.hpp.7DE362F8D59A273A.idx  match_engine.hpp.294E5BC0A68626DC.idx  metrics_publisher.hpp.4757DA2E6FF73EA1.idx  orchestrator_server.cpp.31A4E8349C2D349D.idx  order_blaster.hpp.5D2AE37C9E7FEBFE.idx  orderbook.hpp.97D5B6BF31DAF280.idx  payload_gen.cpp.CFABA9A93A9490F6.idx  payload_gen.hpp.325B4018710858A6.idx  pipeline_e2e.cpp.C59C8DEDEFEE0F89.idx  pipeline_engine.hpp.30C137A0FCA1CFD5.idx  protocol.hpp.36533B488FFDC438.idx  ring_buffer.hpp.CEA49EC713FD0C96.idx  (+13 more)
bench/: bench_arena.cpp  bench_blaster.cpp  bench_iouring.cpp  bench_pipeline.cpp  bench_ringbuf.cpp  bench_shm.cpp  bench_ultra.cpp  validate_checkpoint1.cpp
cmake/: CompilerFlags.cmake
core/include/core/: arena.hpp  compiler_hints.hpp  cpu_affinity.hpp  crtp_engine.hpp  flat_map.hpp  hdr_histogram.hpp  hot_path_asm.hpp  ring_buffer.hpp  spinlock.hpp  tsc.hpp  types.hpp
core/src/: .arena.cpp.swp  arena.cpp  hdr_histogram.cpp
docs/: ARCHITECTURE_BOOK.md  BENCHMARK_METHODOLOGY.md  FPGA_SIMULATION_REPORT.md
docs/diagrams/: .mermaid-config.json  01_system_architecture.mmd  02_data_flow.mmd  03_memory_architecture.mmd  04_matching_engine_fsm.mmd  05_firecracker_isolation.mmd  06_scoring_formula.mmd  07_infrastructure_stack.mmd  render_diagrams.sh
exchange/include/exchange/: audit_log.hpp  correctness_validator.hpp  gateway.hpp  market_data_gen.hpp  match_engine.hpp  orderbook.hpp  sequencer.hpp  shadow_orderbook.hpp  stress_scenarios.hpp
exchange/src/: exchange_local.cpp
fpga/: Makefile
fpga/aws/: build_afi.sh
fpga/rtl/: dma_ring.sv  iicpc_pkg.sv  match_engine_fpga.sv  order_parser.sv  sequencer_core.sv  sequencer_top.sv
fpga/sim/: tb_match_engine.sv  tb_sequencer.sv
infra/docker/: Dockerfile.api  Dockerfile.engine  docker-compose.yml
infra/firecracker/: contestant_wrapper.sh
infra/firecracker/snapshots/: snapshot_state
infra/nginx/: iicpc.conf
infra/terraform/: bootstrap.sh  deploy.sh  fpga.tf  main.tf  terraform.tfvars
loadgen/include/loadgen/: bot_fleet.hpp  io_engine.hpp  order_blaster.hpp  payload_gen.hpp  pipeline_engine.hpp  shm_engine.hpp  ultra_engine.hpp
loadgen/src/: bot_fleet.cpp  io_engine.cpp  payload_gen.cpp
orchestrator/include/orchestrator/: contest_runner.hpp  post_contest_validator.hpp
orchestrator/proto/: control.proto
orchestrator/src/: integrated_worker.cpp  orchestrator_server.cpp  run_contest.cpp  worker_agent.cpp
pipeline/include/pipeline/: metrics_publisher.hpp
pipeline/src/: pipeline_e2e.cpp
results/: .gitignore  bench_arena.txt  bench_blaster.txt  bench_iouring.txt  bench_pipeline.txt  bench_ringbuf.txt  bench_shm.txt  bench_ultra.txt  checkpoint1.txt  exchange_local.txt  fpga_sim_output.txt  perf_stat_blaster.txt  perf_stat_shm.txt
sandbox/include/sandbox/: compiler_service.hpp  firecracker_manager.hpp  sandbox_bridge.hpp
scripts/: build_rootfs.sh  create_snapshot.sh  dev.sh  e2e_test.sh  firecracker_sandbox.sh  harden_determinism.sh  plot_histograms.py  post_contest_test.sh  pre_submit.sh  profile_contest.sh  render_waveforms.py  sandbox_run.sh  soak_test.sh  test_firecracker.sh  validate_determinism.sh
sdk/: README.md
sdk/examples/: example_mm.cpp
sdk/include/sdk/: gateway_client.hpp  protocol.hpp  strategy_sdk.hpp
sdk/src/: strategy_main.cpp
server/src/: dummy_exchange.cpp  mt_exchange.cpp
telemetry/include/telemetry/: consumer.hpp
telemetry/src/: consumer.cpp
tests/: sample_orderbook.cpp
web/backend/: main.py  requirements.txt
web/frontend/: README.md  package-lock.json  vite.config.ts
web/frontend/src/: app.css
web/frontend/src/lib/: auth.ts  quotes.ts  ws.ts
web/frontend/src/routes/: +layout.svelte  +page.svelte
web/frontend/src/routes/admin/: +page.svelte
web/frontend/src/routes/auth/: +page.svelte
web/frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
web/frontend/src/routes/dashboard/guidelines/: +page.svelte
web/frontend/src/routes/dashboard/leaderboard/: +page.svelte
web/frontend/src/routes/dashboard/submit/: +page.svelte
